# RouterOS-MCP

./: .env.example  .gitignore  ARCHITECTURE.md  CI_WORKFLOW_UPDATES.md  CONTRIBUTING.md  CUSTOM_AGENT.md  DEVICE_LIST_IMPLEMENTATION.md  IMPLEMENTATION-CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  PHASE3_TEST_SUMMARY.md  PHASE_FEATURES_SUMMARY.md  README-COPILOT-SETUP.md  README.md  T4_IMPLEMENTATION_SUMMARY.md  alembic.ini  bandit-report.json  pyproject.toml  routeros_mcp.db
.github/: CODEOWNERS  copilot-instructions.md  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: add-tests.md  agent-task.md  bug-fix.md  config.yml  feature-request.md  refactoring.md
.github/agents/: ci-release-engineer.agent.md  docs-examples.agent.md  fastmcp-implementation.agent.md  mcp-protocol-compatibility.agent.md  mcp.agent.md  routeros-mcp-planner.agent.md  routeros-rest-api-specialist.agent.md  routeros-ssh-fallback-specialist.agent.md  security-reviewer.agent.md  test-engineer-tdd.agent.md
.github/instructure/: python.instructions.md
.github/workflows/: copilot-agent-ci.yml  copilot-setup-steps.yml  e2e-http-transport.yml  labels-sync.yml
alembic/: env.py
alembic/versions/: 28c6b758594a_add_phase3_capability_flags.py  29_add_bandwidth_test_capability.py  30_add_job_progress_tracking_fields.py  31_add_multi_device_plan_fields.py  32_convert_to_timescaledb.py  33_add_ssh_key_credentials.py  34_phase5_rbac_models.py  35_add_approval_requests.py  35_add_user_table.py  36_add_approval_requests.py  37_add_audit_user_fields.py  5af5a03f7b5e_initial_schema.py  de268cf36ca1_add_adaptive_polling_fields_to_device.py
config/: .gitignore  http_lab.yaml  lab.yaml  prod.yaml
docs/: 00-requirements-and-scope-specification.md  01-overall-system-architecture-and-deployment-topology.md  02-security-oauth-integration-and-access-control.md  03-routeros-integration-and-platform-constraints-rest-and-ssh.md  04-mcp-tools-interface-and-json-schema-specification.md  05-domain-model-persistence-and-task-job-model.md  06-system-information-and-metrics-collection-module-design.md  07-device-control-and-high-risk-operations-safeguards.md  08-observability-logging-metrics-and-diagnostics.md  09-operations-deployment-self-update-and-runbook.md  10-testing-validation-and-sandbox-strategy-and-safety-nets.md  11-implementation-architecture-and-module-layout.md  12-development-environment-dependencies-and-commands.md  13-python-coding-standards-and-conventions.md  14-mcp-protocol-integration-and-transport-design.md  15-mcp-resources-and-prompts-design.md  16-detailed-module-specifications.md  17-configuration-specification.md  18-database-schema-and-orm-specification.md  19-json-rpc-error-codes-and-mcp-protocol-specification.md  20-http-sse-transport-deployment-guide.md  21-oauth-setup-azure-ad.md  22-oauth-setup-okta.md  23-oauth-setup-auth0.md  24-http-transport-troubleshooting.md  ADMIN_CLI.md  ANALYSIS.md  CONSOLIDATION-SUMMARY.md  DOCUMENTATION-AUDIT.md  ENDPOINT-TOOL-MAPPING.md  MYPY_RESTORATION_PLAN.md  PERFORMANCE_TESTING.md  PHASE-TERMINOLOGY-CLEANUP.md  PHASE4_GITHUB_ISSUES.md  PHASE4_IMPLEMENTATION_PLAN.md  PHASE4_MIGRATION_GUIDE.md  PHASE5_IMPLEMENTATION_PLAN.md  PHASE5_ISSUES.md  PHASE_IMPLEMENTATION_SUMMARY.md  STREAMING_TOOLS_GUIDE.md
docs/archive/: CONSISTENCY-REVIEW.md  FINAL-STATUS.md  IMPROVEMENTS-SUMMARY.md  PHASE1-REVISION-PLAN.md  README.md
docs/best_practice/: github-copilot-coding-agent-best-practices.md  github-readme-best-practices.md  mcp_best_practices_merged.md  mcp_design_procedure_merged.md  vscode-copilot-custom-agents-best-practices.md
examples/: curl_example.sh  http_client.py  version_detection_example.py
frontend/: README.md  index.html  package-lock.json
frontend/src/: App.tsx
prompts/: README.md  address_list_sync.yaml  comprehensive_device_review.yaml  device_onboarding.yaml  dhcp_lease_review.yaml  dns_ntp_rollout.yaml  fleet_health_review.yaml  security_audit.yaml  troubleshoot_device.yaml  troubleshoot_dns_ntp.yaml  troubleshoot_wireless.yaml
routeros_mcp/: __init__.py  cli.py  config.py  main.py
routeros_mcp/api/: __init__.py  admin.py  admin_models.py  http.py
routeros_mcp/cli/: __init__.py  admin.py
routeros_mcp/domain/: __init__.py  exceptions.py  models.py  utils.py
routeros_mcp/infra/: __init__.py  cache.py  health.py  rate_limit.py  rate_limiter.py
routeros_mcp/mcp/: __init__.py  errors.py  server.py
routeros_mcp/mcp_prompts/: __init__.py  loader.py  registry.py  renderer.py
routeros_mcp/mcp_resources/: __init__.py  audit.py  bridge.py  device.py  dhcp.py  fleet.py  plan.py  utils.py  wireless.py
routeros_mcp/mcp_tools/: __init__.py  bridge.py  config.py  device.py  dhcp.py  diagnostics.py  dns_ntp.py  firewall_logs.py  firewall_write.py  interface.py  ip.py  routing.py  system.py  wireless.py
routeros_mcp/security/: __init__.py  auth.py  authz.py  crypto.py  oidc.py  safeguards.py
scripts/: add_device.py  benchmark_report.py  fix_credential_type.py  run_mcp_streamable_http.py  test_connectivity.py  validate_docs.py
scripts/labels/: create_phase5_labels.sh
tests/: __init__.py  conftest.py  manual_server_validation.py  test_config.py
tests/e2e/: Dockerfile.test  README.md  __init__.py  benchmark_test.py  docker-compose.yml  e2e_test_utils.py  load_test.py  phase3_test_utils.py  run_e2e_tests.sh  test_bridge_tools.py  test_dhcp_tools.py  test_e2e_device_tools.py  test_e2e_diagnostics_tools.py  test_e2e_dns_ntp_tools.py  test_e2e_interface_ip_tools.py  test_e2e_routing_firewall_logs_tools.py  test_e2e_system_overview_tool.py  test_http_sse_roundtrip.py  test_http_transport_clients.py  test_multi_device_rollout.py  test_oidc_flow.py  test_phase3_workflows.py  test_phase4_comprehensive.py  test_sse_subscriptions.py  test_wireless_tools.py
tests/smoke/: test_format_resource_content_smoke.py  test_jsonrpc_protocol_smoke.py  test_mcp_resources_and_tools.py  test_mcp_server_registration.py  test_new_services_structure.py  test_phase3_tool_registration_smoke.py  (+5 more)
versions/: 20251209_1958_b01b8344a1b2_initial_schema.py
(+197 files in other folders)
